# c-mile

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appdata.xml  build_release.sh  c-mile.desktop  devicemanager.cpp  devicemanager.h  formatmanager.cpp  formatmanager.h  imagewriter.cpp  imagewriter.h  main.cpp  mainwindow.cpp  mainwindow.h  utils.h
